src/objects/BFM_MIGO__c.object
<CustomObject>
    <fields>
        <fullName>Acess_Key__c</fullName>
        <label>Acess Key</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CT_e__c</fullName>
        <label>CT-e</label>
        <referenceTo>BFM_CT_e__c</referenceTo>
        <relationshipLabel>MIGO</relationshipLabel>
        <relationshipName>MIGO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Creation_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creation User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MIGO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GR_Date__c</fullName>
        <label>GR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GR_Document_Number__c</fullName>
        <label>GR Document Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>MIGO</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MIGO-{00000000}</displayFormat>
        <label>MIGO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MIGO</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>